src/styles/header.module.scss
@import "./variables.scss";
/*header {
    background-color: rgba($fontColor, 0.9);
    border-bottom: 2px $primaryColorShadow solid;
}

nav {
    width: 50%;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
}*/

/*.logo {
    width: 50%;
    min-height: 10vh;
    display: flex;
    align-items: center;
    justify-content: space-between;

    a {
        font-size: 20px;
        color: $tertiaryColor;
        text-decoration: none;
        text-transform: uppercase;
        transition: color .4s;
    }

    a:hover {
        color: $primaryColor;
    }

    a h1 {
        font-family: "Permanent Marker", "Roboto Condensed", "Segoe UI", "Arial";
    }
}*/

.burger {
    display: none;
    font-size: 1.5em;
    text-decoration: none;
    color: $secondaryColor;
    background-color: transparent;
    outline: none;
    border: none;
    cursor: pointer;
    transition: color .4s;
}

.burger:hover {
    color: $primaryColor;
}

.nav-list {
    width: 50%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0 auto;

    li {
        list-style: none;
        margin: 0 25px;
    }
}

.nav-item {
    font-size: 18px;
    font-weight: bold;
    letter-spacing: 5px;
    text-transform: uppercase;
    text-decoration: none;
    color: $secondaryColor;
    transition: color .5s;
}

.nav-item-active {
    color: $tertiaryColor;
    border-bottom: 3px solid;
}

.nav-item:hover {
    border-bottom: 3px solid;
    color: $primaryColor;
}

@media screen and (max-width: 992px) {


    .logo {
        padding: 0 20px;
    }
}

@media screen and (max-width: 768px) {


    .logo {
        width: 100%;
    }

    .burger {
        display: flex;
    }

    .nav-list {
        display: none;
        width: 100%;
        flex-direction: column;
    }

    .active {
        display: flex;
    }

    .nav-list li {
        margin: 20px;
    }
}

